--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
+  
+  <div id="container"></div>
 
-  <div id="container">
-   
-  </div>
 
 <script src="https://code.jquery.com/jquery.min.js"></script>
 <script type="text/javascript" src="index.js"></script>
